--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,13 @@
 <!doctype html>
 <html>
   <head>
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({
+                google_ad_client: "ca-pub-1478903540442727",
+                    enable_page_level_ads: true
+                      });
+    </script>
     <!-- Global Site Tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113477938-1"></script>
     <script>
