--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,6 +51,14 @@
         {% if site.github.is_user_page %}
           <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
         {% endif %}
+        
+        {% if site.show_chat %}
+          <ul class="downloads">
+            <li><a href="">Weibo <strong>WEIBO</strong></a></li>
+            <li><a href="">E-mail <strong></strong></a></li>
+            <li><a href="{{ site.github.repository_url }}">Viewon<strong>GitHub</strong></a></li>
+          </ul>
+        {% endif %}
 
         {% if site.show_downloads %}
           <ul class="downloads">
@@ -59,7 +67,10 @@
             <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
           </ul>
         {% endif %}
-
+        爱好：
+        <ul>
+            <li><a href="">生命诚可贵 爱情价更高</a></li>
+        </ul>
       {% if site.custom_sidebar %}
           {% include sidebar.html %}
       {% endif %}
