--- a/_includes/git-wiki/components/lists/page-list.html
+++ b/_includes/git-wiki/components/lists/page-list.html
@@ -3,11 +3,11 @@
     {% include {{ site.inc_before_page_list }} %}
     {% endif %}
 
-    <span class="page-list-title">Pages {% if (site.show_wiki_pages_limit >= 1 %} (Latest {{site.show_wiki_pages_limit
+    <span class="page-list-title">页面 {% if (site.show_wiki_pages_limit >= 1 %} (Latest {{site.show_wiki_pages_limit
         }} updated) {% endif %}:</span>
     <ul class="page-list">
         {% assign numPages=0 %}
-        {% assign items = site.html_pages | sort: 'date' %}
+        {% assign items = site.html_pages | rsort: 'date' %}
         {% for page in items %}
         {% if numPages >= site.show_wiki_pages_limit %}
         {% break %}
