--- a/_includes/git-wiki/components/lists/post-list.html
+++ b/_includes/git-wiki/components/lists/post-list.html
@@ -3,11 +3,11 @@
     {% include {{ site.inc_before_post_list }} %}
     {% endif %}
 
-    <span class="post-list-title">Posts {% if (site.show_wiki_posts_limit >= 1 %} (Latest {{site.show_wiki_posts_limit
+    <span class="post-list-title">博客 {% if (site.show_wiki_posts_limit >= 1 %} (Latest {{site.show_wiki_posts_limit
         }} updated) {% endif %}:</span>
     <ul class="post-list">
         {% assign numPages=0 %}
-        {% assign items = site.posts | sort: 'date' %}
+        {% assign items = site.posts | rsort: 'date' %}
         {% for post in items %}
         {% if numPages >= site.show_wiki_posts_limit %}
         {% break %}
